@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-28T00:39:48Z",
+  "timestamp" : "2025-02-28T12:14:48Z",
   "count_outdated" : 8555,
   "uniques_outdated" : 3952,
-  "count" : 8588,
-  "uniques" : 3978,
+  "count" : 8589,
+  "uniques" : 3979,
   "clones" : [
     {
       "timestamp": "2025-02-15T00:00:00Z",
@@ -121,6 +121,15 @@
       "uniques": 5,
       "uniques_minmax": [ 1, 5 ],
       "uniques_decinc": [ 0, 5 ]
+    },
+    {
+      "timestamp": "2025-02-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
