@@ -1,5 +1,5 @@
 {
-  "count": 33,
+  "count": 34,
   "uniques": 11,
   "clones": [
     {
@@ -66,6 +66,11 @@
       "timestamp": "2025-02-27T00:00:00Z",
       "count": 6,
       "uniques": 5
+    },
+    {
+      "timestamp": "2025-02-28T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
